k8s/envoy-app/deployment-httpecho.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-echo
  template:
    metadata:
      labels:
        app: http-echo
    spec:
      containers:
      - name: http-echo
        image: ghcr.io/mendhak/http-https-echo:38
        ports:
        - containerPort: 8080
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: httpecho
spec:
  selector:
    app: http-echo
  ports:
  - port: 80
    targetPort: http
